@@ -1,3 +1,8 @@
+1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* directory.m (get_base_class_name): New function.
+	(java_instantiate_using): Use it.  Tack on "Impl" after "U".
+
 1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* directory.h: Undef SIZEOF_LONG before including jni.h.
